Migrate natlab from tcli to UniFFI bindings
So far, natlab tests have been using tcli to interact with libtelio.
Now that we have FFI bindings that can be easily generated from source
as part of the build, it makes sense to migrate natlab to UniFFI
bindings, as a form of dogfooding.

The main thing that is new here is the introduction of Pyro5 to enable
communication between the host and the different containers in which
the tests are running, since in general, libtelio is running in some
container(s) and/or VM(s) whereas the test is run from the host and
there needs to be some way for the host the control what libtelio is
doing. The bindings we are using are in python, so some kind of RPC or
remote object framework is needed. Pyro5 is one such framework that is
easy and low friction. In the containers and VMs, libtelio_remote.py
is running, which in turn is running an instance of libtelio through
generated bindings. Then on the host side, libtelio_proxy.py is set
up to communicate with libtelio_remote.py through standard Pyro5
mechanisms. As a result, we can add a property to our test Client
that has an instance of a proxy, allowing us to easily communicate
with the remote as if it was also running on the host.

Since a test Client already abstracts away the communication with tcli,
doing the migration doesn't involve that many code changes inside the
actual tests.

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -3,6 +3,19 @@ on: [workflow_call]
 permissions: {}
 
 jobs:
+  uniffi-bindings:
+      runs-on: ubuntu-22.04
+      container:
+          image: ghcr.io/nordsecurity/uniffi-generators:v0.25.0-8
+      steps:
+        - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+        - run: uniffi-bindgen generate src/libtelio.udl --language python
+        - run: mkdir -p dist/bindings/
+        - run: cp src/telio.py dist/bindings/telio_bindings.py
+        - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+          with:
+            name: telio_bindings.py
+            path: dist/bindings
   check:
       runs-on: ubuntu-22.04
       steps:
@@ -105,19 +118,31 @@ jobs:
         - run: autoflake --check .
           working-directory: nat-lab
   python-lint:
+      needs: uniffi-bindings
       runs-on: ubuntu-22.04
       steps:
         - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+        - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+          with:
+            name: telio_bindings.py
+            path: dist/bindings
+        - run: cp dist/bindings/telio_bindings.py nat-lab/tests/uniffi/telio_bindings.py
         - run: pip3 install --no-deps -r requirements.txt
         - run: pipenv install --system
         - run: pipenv install --system
           working-directory: nat-lab
-        - run: pylint -f colorized .
+        - run: pylint -f colorized . --ignore telio_bindings.py
           working-directory: nat-lab
   natlab-typecheck:
+      needs: uniffi-bindings
       runs-on: ubuntu-22.04
       steps:
         - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+        - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+          with:
+            name: telio_bindings.py
+            path: dist/bindings
+        - run: cp dist/bindings/telio_bindings.py nat-lab/tests/uniffi/telio_bindings.py
         - run: pip3 install --no-deps -r requirements.txt
         - run: pipenv install --system
         - run: pipenv install --system
