--- a/nat-lab/docker-compose.yml
+++ b/nat-lab/docker-compose.yml
@@ -71,6 +71,8 @@ services:
     networks:
       cone-net-01:
         ipv4_address: 192.168.101.104
+    ports:
+      - "58001:58001"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.101.254
     extra_hosts:
@@ -89,6 +91,8 @@ services:
     networks:
       cone-net-02:
         ipv4_address: 192.168.102.54
+    ports:
+      - "58002:58002"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.102.254
   # Client that shares two cone networks on different interfaces
@@ -100,6 +104,8 @@ services:
         ipv4_address: 192.168.101.67
       cone-net-05:
         ipv4_address: 192.168.113.67
+    ports:
+      - "58003:58003"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.101.254
       CLIENT_GATEWAY_SECONDARY: 192.168.113.254
@@ -111,6 +117,8 @@ services:
     networks:
       internet:
         ipv4_address: 10.0.11.2
+    ports:
+      - "58004:58004"
     environment:
       CLIENT_GATEWAY_PRIMARY: none
   open-internet-client-02:
@@ -119,6 +127,8 @@ services:
     networks:
       internet:
         ipv4_address: 10.0.11.3
+    ports:
+      - "58005:58005"
     environment:
       CLIENT_GATEWAY_PRIMARY: none
   # Open internet client used on ipv6 tests
@@ -129,6 +139,8 @@ services:
       internet:
         ipv4_address: 10.0.11.4
         ipv6_address: 2001:db8:85a4::dead:beef:ceed
+    ports:
+      - "58006:58006"
     environment:
       CLIENT_GATEWAY_PRIMARY: none
     extra_hosts:
@@ -144,6 +156,8 @@ services:
     networks:
       fullcone-net-01:
         ipv4_address: 192.168.109.88
+    ports:
+      - "58007:58007"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.109.254
   fullcone-client-02:
@@ -152,6 +166,8 @@ services:
     networks:
       fullcone-net-02:
         ipv4_address: 192.168.106.88
+    ports:
+      - "58008:58008"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.106.254
 
@@ -161,6 +177,8 @@ services:
     networks:
       upnp-net-01:
         ipv4_address: 192.168.105.88
+    ports:
+      - "58009:58009"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.105.254
   upnp-client-02:
@@ -169,6 +187,8 @@ services:
     networks:
       upnp-net-02:
         ipv4_address: 192.168.112.88
+    ports:
+      - "58010:58010"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.112.254
 
@@ -178,6 +198,8 @@ services:
     networks:
       hsymmetric-net-01:
         ipv4_address: 192.168.103.88
+    ports:
+      - "58011:58011"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.103.254
   symmetric-client-02:
@@ -186,6 +208,8 @@ services:
     networks:
       hsymmetric-net-02:
         ipv4_address: 192.168.104.88
+    ports:
+      - "58012:58012"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.104.254
   internal-symmetric-client-01:
@@ -197,6 +221,8 @@ services:
     networks:
       hsymmetric-internal-net-01:
         ipv4_address: 192.168.114.88
+    ports:
+      - "58013:58013"
 
   udp-block-client-01:
     hostname: udp-block-client-01
@@ -204,6 +230,8 @@ services:
     networks:
       udp-block-net-01:
         ipv4_address: 192.168.110.100
+    ports:
+      - "58014:58014"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.110.254
   udp-block-client-02:
@@ -212,6 +240,8 @@ services:
     networks:
       udp-block-net-02:
         ipv4_address: 192.168.111.100
+    ports:
+      - "58015:58015"
     environment:
       CLIENT_GATEWAY_PRIMARY: 192.168.111.254
 
