--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,3 +58,47 @@ jobs:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - name: Test replacement script
         run: python3 ci/test_replace_string.py
+
+  test-build-version-replacement-linux:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+        with:
+          submodules: true
+      - uses: Swatinem/rust-cache@b8a6852b4f997182bdea832df3f9e153038b5191 # v2.6.0
+        with:
+          key: x86-linux
+      - name: Build libtelio
+        run: python3 ci/build_libtelio.py build linux x86_64
+      - name: Replace and Test version
+        run: |
+          BRANCH=${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}
+          SHA=${GITHUB_SHA:-$(git rev-parse HEAD)}
+          DATE=$(git show ${SHA} -s --date=format:'%Y%m%d/%H%M' --format=%cd)
+          BUILD_TAG="${BRANCH}+${DATE}+${SHA:0:8}"
+          ./ci/insert_libtelio_version.py -n ${BUILD_TAG} -p ./dist/linux
+          ./dist/linux/release/x86_64/tcli
+          echo "Build tag ${BUILD_TAG}"
+          head -n 1 tcli.log | grep -a "${BUILD_TAG}"
+
+  test-build-version-replacement-mac:
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+        with:
+          submodules: true
+      - uses: Swatinem/rust-cache@b8a6852b4f997182bdea832df3f9e153038b5191 # v2.6.0
+        with:
+          key: x86-macos
+      - name: Build libtelio
+        run: python3 ci/build_libtelio.py build macos x86_64
+      - name: Replace and Test version
+        run: |
+          BRANCH=${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}
+          SHA=${GITHUB_SHA:-$(git rev-parse HEAD)}
+          DATE=$(git show ${SHA} -s --date=format:'%Y%m%d/%H%M' --format=%cd)
+          BUILD_TAG="${BRANCH}+${DATE}+${SHA:0:8}"
+          ./ci/insert_libtelio_version.py -n ${BUILD_TAG} -p ./dist/darwin/macos
+          ./dist/darwin/macos/release/x86_64/tcli
+          echo "Build tag ${BUILD_TAG}"
+          head -n 1 tcli.log | grep -a "${BUILD_TAG}"
