--- a/clis/tcli/Cargo.toml
+++ b/clis/tcli/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 license = "GPL-3.0-only"
 repository = "https://github.com/NordSecurity/libtelio"
+default-run = "tcli"
 
 [dependencies]
 dirs = "4.0.0"
@@ -15,6 +16,12 @@ reqwest = { version = "0.11.16", default-features = false, features = [
 ] }
 rustyline = "11.0.0"
 shellwords = "1.1.0"
+# Used only for checking if the daemon is running.
+sysinfo = "0.30.11"
+# Used as a lightweight and safe (because a TCP server has the risk of remote code execution)
+# way for the API and daemon to communicate.
+# Tokio support is needed, because the daemon runs on the async runtime.
+interprocess = { version = "1.2.1" }
 
 anyhow.workspace = true
 base64.workspace = true
@@ -22,6 +29,7 @@ clap.workspace = true
 crypto_box.workspace = true
 hex.workspace = true
 ipnetwork.workspace = true
+futures.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
@@ -45,3 +53,8 @@ telio-task.workspace = true
 telio-traversal.workspace = true
 telio-utils.workspace = true
 telio-wg.workspace = true
+
+[target.'cfg(unix)'.dependencies]
+# Used to avoid the manual work of daemonizing the libtelio process.
+# Also is the only reason why Windows isn't supported.
+daemonize = "0.5.0"
