--- a/crates/telio-sockets/Cargo.toml
+++ b/crates/telio-sockets/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { workspace = true, features = ["full"] }
 
 telio-utils.workspace = true
 
+
 [dev-dependencies]
 mockall.workspace = true
 rstest.workspace = true
@@ -31,6 +32,9 @@ version-compare = "0.1"
 debug_panic = "0.2.1"
 nix = "0.26.2"
 system-configuration = { git = 'https://github.com/NordSecurity/system-configuration-rs.git' }
+network-framework-sys = "0.1"
+block = "0.1"
+dispatch = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { workspace = true, features = [
