--- a/crates/telio-sockets/Cargo.toml
+++ b/crates/telio-sockets/Cargo.toml
@@ -34,7 +34,7 @@ nix = "0.26.2"
 system-configuration = { git = 'https://github.com/NordSecurity/system-configuration-rs.git' }
 network-framework-sys = "0.1"
 block = "0.1"
-dispatch = "0.2"
+dispatch = { git = "https://github.com/tomaszklak/rust-dispatch.git", rev = "13447cd7221a74ebcce1277ae0cfc9a421a28ec5" }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { workspace = true, features = [
