PQ: `AuthTag` in the GET KEY request and improve REKEY
It was decided that the current approach for fetching keys
is susceptible to DDoS attack, since the attacker can push
GET KEY request with the public key of a victim to block
his VPN connection for 3 minutes.
With REKEY the current approach with random preshared key is flawed
since the new key is send in plain text (although its
protected by the outter tunnel). The new approach reuses
the Kyber KEM to establish a new preshared key.

Signed-off-by: Mateusz Szczygieł <mateusz.szczygiel@nordsec.com>

--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -45,6 +45,6 @@ jobs:
         - name: fuzz telio pq parse_get_packet
           working-directory: crates/telio-pq
           run: cargo fuzz run parse_get_packet -- -max_total_time=180
-        - name: fuzz telio pq parse_rekey_packet
+        - name: fuzz telio pq parse_response_payload
           working-directory: crates/telio-pq
-          run: cargo fuzz run parse_rekey_packet -- -max_total_time=180
+          run: cargo fuzz run parse_response_payload -- -max_total_time=180
