--- a/crates/telio-pq/Cargo.toml
+++ b/crates/telio-pq/Cargo.toml
@@ -15,6 +15,8 @@ fuzzing = []
 # pqcrypto version is fixed, because the newer version implements incompatible kyber kem according to draft specs
 pqcrypto-kyber = { version = "=0.7.6", default-features = false }
 pqcrypto-traits = { default-features = false, version = "0.3.5" }
+hmac = { version = "0.12.1", features = ["std"] }
+blake2 = "0.10.6"
 
 telio-crypto.workspace = true
 telio-model.workspace = true
@@ -29,6 +31,8 @@ rand.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+x25519-dalek.workspace = true
+sha2.workspace = true
 
 [dev-dependencies]
 base64.workspace = true
