Rebind sockets when network path changes on Apple
When NWPathMonitor call a callback with a new path, not only store it for future use
but also notify all NativeProtector instances that the new path had been identified.
This will now trigger rebind of protected sockets, if the new interface has changed.

--- a/crates/telio-sockets/Cargo.toml
+++ b/crates/telio-sockets/Cargo.toml
@@ -17,6 +17,7 @@ thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
 
 telio-utils.workspace = true
+once_cell.workspace = true
 
 [dev-dependencies]
 mockall.workspace = true
