--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -124,3 +124,30 @@ jobs:
           working-directory: nat-lab
         - run: mypy .
           working-directory: nat-lab
+  unused-features:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+      - uses: actions-rs/toolchain@b2417cde72dcf67f306c0ae8e0828a81bf0b189f # v1.0.6
+        with:
+          toolchain: 1.77.2
+          default: true
+      - uses: actions-rs/install@9da1d2adcfe5e7c16992e8242ca33a56b6d9b101
+        with:
+          crate: cargo-unused-features
+          version: 0.2.0
+      - name: Run cargo-unused-features
+        run: |
+          for dir in ./crates/* ./clis/*; do
+            pushd "$dir"
+            unused-features analyze -l debug
+            unused-features prune -l debug
+            popd
+          done
+      - name: Check results
+        run: |
+          git restore Cargo.lock
+          if ! git diff --quiet; then
+            git diff
+            exit 1
+          fi
