--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: install python3-requests
         run: pip3 install requests
       - name: Generate bindings
-        run: python3 ci/build_libtelio.py bindings
+        run: python3 ci/build_libtelio.py bindings --dockerized
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
           name: libtelio-bindings
