--- a/crates/telio-crypto/Cargo.toml
+++ b/crates/telio-crypto/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/NordSecurity/libtelio"
 publish = false
 
 [dependencies]
-serde_with = "3.7.0"
+serde_with = { features = ["macros"], default-features = false, version = "3.7.0" }
 
 base64.workspace = true
 crypto_box.workspace = true
