--- a/crates/telio-pq/Cargo.toml
+++ b/crates/telio-pq/Cargo.toml
@@ -15,8 +15,8 @@ fuzzing = []
 # pqcrypto version is fixed, because the newer version implements incompatible kyber kem according to draft specs
 pqcrypto-kyber = { version = "=0.7.6", default-features = false }
 pqcrypto-traits = { default-features = false, version = "0.3.5" }
-hmac = { version = "0.12.1", features = ["std"] }
-blake2 = "0.10.6"
+hmac = { version = "0.12.1", default-features = false }
+blake2 = { default-features = false, version = "0.10.6" }
 
 telio-crypto.workspace = true
 telio-model.workspace = true
