--- a/.github/workflows/dod.yml
+++ b/.github/workflows/dod.yml
@@ -1,7 +1,7 @@
 name: Definition of Done
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize]
 permissions: {}
 
 jobs:
