--- a/clis/teliod/Cargo.toml
+++ b/clis/teliod/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 clap.workspace = true
+reqwest = { version = "0.11.16", default-features = false, features = [
+    "json",
+    "blocking",
+    "rustls-tls",
+] }
 serde = { workspace = true }
 serde_json.workspace = true
 tracing.workspace = true
@@ -24,3 +29,4 @@ signal-hook = "0.3.17"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"]}
 futures.workspace = true
 thiserror.workspace = true
+base64 = "0.22.1"
