--- a/clis/teliod/Cargo.toml
+++ b/clis/teliod/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 clap.workspace = true
+regex.workspace = true
 reqwest = { version = "0.11.16", default-features = false, features = [
     "json",
-    "blocking",
     "rustls-tls",
 ] }
 serde = { workspace = true }
